# exam_24_06-2023

./: README.md
YashinExam/Exam/build-exam-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  exam.ilk
YashinExam/Exam/build-exam-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-725346ea274079f6dfb9.json  codemodel-v2-05309163bb1f493e3c08.json  (+1 more)
YashinExam/Exam/build-exam-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
YashinExam/Exam/build-exam-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
YashinExam/Exam/build-exam-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
YashinExam/Exam/exam/: CMakeLists.txt  Dockerfile  MetricRegister.cpp  main.cpp  metricregister.h
YashinExam/UnitTest/UnitTest/: CMakeLists.txt  unittest.cpp
YashinExam/UnitTest/UnitTest/UnitTest/: CMakeLists.txt
YashinExam/UnitTest/UnitTest/build-UnitTest-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
YashinExam/UnitTest/UnitTest/build-UnitTest-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
YashinExam/UnitTest/UnitTest/build-UnitTest-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
YashinExam/UnitTest/UnitTest/build-UnitTest-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
(+75 files in other folders)
